--- a/.gitignore
+++ b/.gitignore
@@ -338,3 +338,10 @@ ASALocalRun/
 
 # BeatPulse healthcheck temp database
 healthchecksdb
+/actoseg/upload/00039k0sg8uao3wd1h9p5lftb.pdf
+/actoseg/upload/00039jxre6m2guic3qky7owds.pdf
+/actoseg/upload/00039.pdf
+/actoseg/upload/00036jymf7u9nb3dr02hvc4ks.pdf
+/actoseg/upload/00035xlet8ma2piq6guc35kyf.pdf
+/actoseg/upload/00034l0eth8a2p4ix6mucq5yf.pdf
+/actoseg/upload/000334wkyesohpd5l1t9bjxf6.pdf
