--- a/actoseg/Web.config
+++ b/actoseg/Web.config
@@ -4,6 +4,21 @@
   https://go.microsoft.com/fwlink/?LinkId=169433
   -->
 <configuration>
+  <system.web.extensions>
+  <scripting>
+    <webServices>
+      <jsonSerialization maxJsonLength="50000000"/>
+    </webServices>
+  </scripting>
+</system.web.extensions>
+  <system.webServer>
+    <security>
+      <requestFiltering>
+        <requestLimits maxAllowedContentLength="52428800" />
+        <!--50MB-->
+      </requestFiltering>
+    </security>
+  </system.webServer>
   <!--
     For a description of web.config changes see http://go.microsoft.com/fwlink/?LinkId=235367.
 
@@ -57,4 +72,5 @@
       <compiler language="vb;vbs;visualbasic;vbscript" extension=".vb" type="Microsoft.CodeDom.Providers.DotNetCompilerPlatform.VBCodeProvider, Microsoft.CodeDom.Providers.DotNetCompilerPlatform, Version=2.0.1.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35" warningLevel="4" compilerOptions="/langversion:default /nowarn:41008 /define:_MYTYPE=\&quot;Web\&quot; /optionInfer+"/>
     </compilers>
   </system.codedom>
+  
 </configuration>
