--- a/.gitignore
+++ b/.gitignore
@@ -345,3 +345,9 @@ healthchecksdb
 /actoseg/upload/00035xlet8ma2piq6guc35kyf.pdf
 /actoseg/upload/00034l0eth8a2p4ix6mucq5yf.pdf
 /actoseg/upload/000334wkyesohpd5l1t9bjxf6.pdf
+/actoseg/upload/D5CCRNTEpd5xl1ft9b2jre6muicq.pdf
+/actoseg/upload/D5CCRNTEn2gvc4rk0s8ao3wd7l1h.pdf
+/actoseg/upload/D5CCRNTEjyrf6tn2vck0g8o4esa1.pdf
+/actoseg/upload/D5CCRNTE1fu9b3qjyr7tn2vc6k0g.pdf
+/actoseg/upload/D5CCRNTE1fth9b2p5jx6mauicqyg.pdf
+/actoseg/upload/D5CCRNTE0g7uoc3wkyds1hp5lt9b.pdf
